# lab5555

./: .coveralls.yml  .gitmodules  CMakeLists.txt  README.md  coveralls.yml  lcov_tnp.info
.github/workflows/: actions.yml
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  cmake_install.cmake  test_acc  test_tr  tests
_build/Gtest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_build/Gtest/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_build/Gtest/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_build/Testing/Temporary/: CTestCostData.txt
_build/banking/: Makefile  cmake_install.cmake
_build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_build/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_build/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
banking/: CMakeLists.txt  Transaction.cpp
banking/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/: gtest.hpp  print.hpp  test.cpp  test1.cpp  test_acc.cpp  test_tr.cpp
workflows/: actions.yml
